uploader and test db connection, no tests

--- a/views/db.html
+++ b/views/db.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>File Uploader - Compozed - ARS</title>
+  <title>Db Checker</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"></script> -->
@@ -20,12 +20,12 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <!-- <span class="glyphicon glyphicon-cloud-upload"></span>-->
-            <h2>File Uploader</h2>
+            <h2>DB Checker Page</h2>
             <h4>Compozed - ARS Project</h4>
-            <div class="progress">
+<!--            <div class="progress">
               <div class="progress-bar" role="progressbar"></div>
-            </div>
-            <button class="btn btn-lg upload-btn" type="button">Upload File</button>
+            </div> -->
+            <button class="btn btn-lg upload-btn" type="button">Test Connection</button>
           </div>
         </div>
       </div>
@@ -38,6 +38,6 @@
   <!-- <script src="../node_modules/jquery/src/jquery.min.js"></script> -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-  <script src="javascripts/upload.js"></script>
+  <script src="javascripts/db.js"></script>
 </body>
 </html>
